# telemetry_preprocessor

./: README.md  architecture.md  cargo.toml
.obsidian/: workspace.json
obsidian_vault/.obsidian/: workspace.json
telemetry_processor/: Cargo.toml  Config.toml
telemetry_processor/src/: config.rs  main.rs
telemetry_processor/src/modules/: error.rs  mod.rs  shard_data_store.rs  submission_worker.rs  traffic_monitor.rs
telemetry_processor/src/modules/submission_worker/: event.rs  helpers.rs  mod.rs  submission.rs
