[package]
name = "telemetry_processor"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.5.9" # or latest version if updated
aws-sdk-kinesis = "1.47.0"  # or the latest version
aws-sdk-sqs = "1.47.0"      # or the latest version
aws-types = "1.3.3"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
uuid = { version = "1", features = ["v4"] }
num_cpus = "1.13.0"