[package]
name = "telemetry_processor"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = { version = "1.5.9", features = ["behavior-version-latest"] }
aws-sdk-kinesis = { version = "1.47.0", features = ["behavior-version-latest"] }
aws-sdk-sqs = { version = "1.47.0", features = ["behavior-version-latest"] }
aws-types = "1.3.3"
base64 = "0.22.1"
futures = "0.3.31"
jsonschema = "0.26.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
uuid = { version = "1", features = ["v4"] }
num_cpus = "1.13.0"
num-bigint = "0.4"
num-traits = "0.2"
toml = "0.8.19"
chrono = "0.4.38"